<resources>
    <string name="app_name">NetCaff Server</string>
    <string name="service_not_bound">Service is not yet bound</string>
    <string name="ble_state_title">Bluetooth State</string>
    <string name="ble_off_status">Bluetooth is Off</string>
    <string name="inactive_status">Inactive</string>
    <string name="server_starting_status">Server Starting</string>
    <string name="server_stopping_status">Server Stopping</string>
    <string name="server_started_status">Server Started</string>
    <string name="server_err_status">Server Startup Error</string>
    <string name="advert_starting_status">Advertisements Starting</string>
    <string name="advert_stopping_status">Advertisements Stopping</string>
    <string name="advert_started_status">Advertisements Started</string>
    <string name="advert_err_status">Advertisements Startup Error</string>
    <string name="device_connected_status">Device Connected</string>
    <string name="device_bd_addr_label">Device BD_ADDR:</string>
    <string name="connected_bd_addr_label">Connected BD_ADDR:</string>
    <string name="orders_list_label">Orders</string>
    <string name="no_orders_text">There are no orders</string>
    <string name="order_id_label">Id:</string>
    <string name="order_id_placeholder">ID</string>
    <string name="order_status_label">Status:</string>
    <string name="order_status_placeholder">STATUS</string>
    <string name="order_time_ready_label">Time Ready:</string>
    <string name="order_time_ready_placeholder">TIME_READY</string>
    <string name="order_ordered_by_label">Ordered By:</string>
    <string name="order_ordered_by_placeholder">ORDERED_BY</string>
    <string name="machine_list_label">Machines</string>
    <string name="no_machines_text">There are no machines</string>
    <string name="machine_getting_label">Comms: Getting</string>
    <string name="machine_making_label">Comms: Making</string>
    <string name="machine_pouring_label">Comms: Pouring</string>
    <string name="machine_dumping_label">Comms: Dumping</string>
    <string name="machine_name_placeholder">NAME</string>
    <string name="machine_cups_available_label">Available Cups:</string>
    <string name="machine_cups_available_placeholder">CUPS</string>
    <string name="machine_water_available_label">Available Water:</string>
    <string name="machine_water_available_placeholder">WATER</string>
    <string name="machine_coffee_available_label">Available Grounds:</string>
    <string name="machine_coffee_available_placeholder">GROUNDS</string>
    <string name="machine_state_label">Current State:</string>
    <string name="machine_state_placeholder">STATE</string>
    <string name="machine_orders_label">Handling Orders:</string>
    <string name="machine_orders_placeholder">ORDERS</string>
    <string name="machine_last_made_label">Time Last Made:</string>
    <string name="machine_last_made_placeholder">LAST_MADE</string>
    <string name="users_title">Users</string>
    <string name="no_users_text">There are no users</string>
    <string name="username_label">Username:</string>
    <string name="username_placeholder">USERNAME</string>
    <string name="owned_token_label">Token:</string>
    <string name="no_token">None</string>
    <string name="owned_token_placeholder">TOKEN</string>
    <string name="owned_token_expiry_label">Token Expires:</string>
    <string name="owned_token_expiry_placeholder">EXPIRY</string>
    <string name="char_title_placeholder">Characteristic Title</string>
    <string name="char_content_placeholder">Characteristic Content</string>
    <string name="char_written_notif">written</string>
    <string name="char_modified_notif">modified</string>
</resources>
