<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/Item">

    <TextView
        android:id="@+id/machine_name_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/machine_name_placeholder"
        style="@style/GridLabel"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/machine_cups_available_label"
            style="@style/GridLabel"/>

        <TextView
            android:id="@+id/machine_cups_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/machine_cups_available_placeholder" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/machine_water_available_label"
            style="@style/GridLabel"/>

        <TextView
            android:id="@+id/machine_water_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:text="@string/machine_water_available_placeholder" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/machine_coffee_available_label"
            style="@style/GridLabel"/>

        <TextView
            android:id="@+id/machine_coffee_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/machine_coffee_available_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/machine_state_label"
            style="@style/GridLabel"/>

        <TextView
            android:id="@+id/machine_state_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:text="@string/order_status_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/machine_orders_label"
            style="@style/GridLabel"/>

        <TextView
            android:id="@+id/machine_orders_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_row="4"
            android:text="@string/machine_orders_placeholder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/machine_last_made_label"
            style="@style/GridLabel"/>

        <TextView
            android:id="@+id/machine_last_made_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:text="@string/machine_last_made_placeholder" />

        <TextView
            android:id="@+id/machine_getting_switch"
            style="@style/GridSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:text="@string/machine_getting_label" />

        <TextView
            android:id="@+id/machine_making_switch"
            style="@style/GridSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/machine_making_label" />

        <TextView
            android:id="@+id/machine_pouring_switch"
            style="@style/GridSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2"
            android:text="@string/machine_pouring_label" />

        <TextView
            android:id="@+id/machine_dumping_switch"
            style="@style/GridSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/machine_dumping_label" />

    </GridLayout>

</LinearLayout>