<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include layout="@layout/characteristic_item" android:id="@+id/request_char"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <include layout="@layout/characteristic_item" android:id="@+id/reply_char"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <include layout="@layout/characteristic_item" android:id="@+id/error_char"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <include layout="@layout/characteristic_item" android:id="@+id/levels_char"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <include layout="@layout/characteristic_item" android:id="@+id/username_char"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <include layout="@layout/characteristic_item" android:id="@+id/password_char"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <include layout="@layout/characteristic_item" android:id="@+id/access_code_char"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <include layout="@layout/characteristic_item" android:id="@+id/login_error_char"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:baselineAligned="false"
            style="@style/Root">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/status_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/inactive_status"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <ProgressBar
                    android:id="@+id/loading_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="4" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/connected_device_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connected_bd_addr_label" />

                <TextView
                    android:id="@+id/connected_bd_addr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <Button
                android:id="@+id/start_server_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onServerStartBtnClick"
                android:text="@string/start_server_action"
                android:visibility="gone"/>

            <Button
                android:id="@+id/start_adverts_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onAdvertsStartBtnClick"
                android:text="@string/start_adverts_action"
                android:visibility="gone"/>

            <LinearLayout
                style="@style/ProfileSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/orders_list_label"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

                <ListView
                    android:id="@+id/orders_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:baselineAligned="false"
            style="@style/Root">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/machine_list_label"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <ListView
                android:id="@+id/machines_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:baselineAligned="false"
            style="@style/Root">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/users_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <ListView
                android:id="@+id/users_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@android:color/transparent"
                android:dividerHeight="10dp" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>